# final_project

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  server_setting.sh
app/: .env  README.md  main.py
app/api/: album_router.py  inference_router.py  real_time_router.py  upload_router.py  user_router.py  video_router.py
app/api/album/: album_router.py
app/api/upload/: upload_router.py
app/api/user/: user_router.py
app/core/: config.py  security.py
app/crud/: crud.py
app/database/: crud.py  database.py  models.py  schemas.py
app/db/: database.py
app/inference/: anomaly_detector.py  anomaly_detector_lstmae.py  rt_anomaly_detector.py  rt_anomaly_detector_lstmae.py
app/models/: anomaly_detector.py  anomaly_detector_LSTM.py  classifier.py  convert.py  models.py  pytorch_model.pth  rt_anomaly_detector.py  train_LSTM.py
app/models/lstmae/: lstm_ae.py  train.py
app/models/pts/: pytorch_model.pth
app/schemas/: schemas.py
app/templates/: album.html  album_detail.html  album_list.html  base.html  frame.html  index.html  index02.html  login.html  main.html  real_time.html  result.html  signup.html  stream.html  upload.html  video.html
app/templates/src/: album_detail.js
app/templates/static/css/: style.css
app/utils/: config.py  security.py  utils.py
datapreprocess/: feature_extraction.ipynb  feature_extraction.py  feature_extraction_onebyone.py  feature_extraction_videoMAEv2.ipynb  feature_extraction_videoMAEv2.py  run.sh
model/lstmae/: calc_abnormal_thr.py  calc_metric.py  calc_normal_thr.py  dataset.py  lstm_ae_old.py  train.py
model/train/: classifier.py  shop_dataset.py  train_BNWVAD.py  train_MIL.py  train_UCFC.py
model/vmae/: __init__.py  classifier.py
model_train/: classifier.py  loss.py  shop_dataset.py  train_BNWVAD.py  train_LSTM.py  train_MIL.py  train_UCFC.py
templates/: album.html  index.html  index02.html  login.html  main.html  main02.html  result.html  signup.html  upload.html
