[tool.poetry]
name = "level2-3-cv-finalproject-cv-06"
version = "0.1.0"
description = ""
authors = ["백광현_T6074 <toiquen419@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-linux_x86_64.whl"}
fastapi = {extras = ["all"], version = "^0.105.0"}
uvicorn = "^0.27.1"
loguru = "^0.7.2"
jinja2 = "^3.1.3"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
sqlalchemy = "2.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
